<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/client"
                    android:title="@string/view_clients"
                    />
            </group>
        </menu>
    </item>

    <item android:title="@string/communication">
        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/contact_us"
                    android:icon="@drawable/contactus"
                    android:title="@string/contact_us" />

                <item
                    android:id="@+id/about_us"
                    android:icon="@drawable/aboutus"
                    android:title="@string/about_us" />

                <item
                    android:id="@+id/share_app"
                    android:icon="@drawable/share"
                    android:title="@string/share_app" />
                <item
                    android:id="@+id/signout"
                    android:icon="@drawable/signout"
                    android:title="@string/signout" />
            </group>

        </menu>
    </item>
</menu>