<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/activity_nav_header"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-3dp"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_subtitle"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/indigo_daisy"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/tool_bar"
            android:layout_marginTop="-15dp"
            android:adjustViewBounds="true"
            android:background="@mipmap/user"
            android:contentDescription="@string/here_we_are"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/store_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/user_avatar"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/store_view_name"
            android:fontFamily="@font/roboto_regular"
            android:padding="10dp"
            android:text="@string/news"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/store_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news"
            android:padding="11dp"
            android:text=""
            android:textColor="#000000"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>